fixed os x lion webkit scrollbar bug in finder

--- a/sass/modules/_finder.sass
+++ b/sass/modules/_finder.sass
@@ -22,11 +22,13 @@
         width: ($n+1)*25%
 
   .col
+    +box-sizing('border-box')
     +transition(width,300ms)
     +float(left)
     position: relative
     width: 25%
     min-height: rhythm(10)
+    border-right: rhythm(.125) solid rgba($blue-dark,$xsmall)
     &:last-child
       +float(right)
     &.focus
@@ -48,9 +50,8 @@
             width: 2/($n+1)*100%
 
   .listordering
-    position: absolute
-    left: 0
-    right: 15px
+    +stretch-x
+    top: 0
     padding: rhythm(.25) rhythm(.5)
     margin: 0
     background: rgba($blue-lightest,.95)
@@ -62,7 +63,7 @@
   .colcontent
     +no-style-list
     +stretch
-    padding-top: rhythm(1.5)
+    margin-top: rhythm(1.5)
     overflow-y: scroll
     overflow-x: hidden
 
